--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,41 @@ font-family: 'Roboto', sans-serif;
    font-weight: bold;
    margin-bottom: 16px;
 }
+
+/*background*/
+
+.container__bg{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+}
+
+.background{
+   width: 68%;
+   height: 290px;
+   border-radius: 10px;
+   position: relative;
+   margin-bottom: 60px;
+}
+
+.background__img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: inherit;
+}
+
+.background__text{
+   position: absolute;
+   width: 100%;
+   bottom: 30px;
+   left: 15px;
+   color: #fff;
+}
+
+.background__title{
+   font-size: 24px;
+   margin-bottom: 4px;
+
+}
