--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ font-family: 'Roboto', sans-serif;
 
 }
 
-/*testimony*/
+/*section testimony*/
 .testimony{
    background: #fafafa;
 }
@@ -346,4 +346,76 @@ font-family: 'Roboto', sans-serif;
    object-fit: cover;
    border-radius:50%;
    object-position: center top;
+}
+
+/*section email*/
+.check{
+   display: flex;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+   margin: 0 auto;
+}
+
+.check__item{
+   width: 30%;
+   padding-right: 10px;
+   display: flex;
+   border-right: 2px solid var(--black2);
+}
+
+.bx-check{
+   background: linear-gradient(180deg, #30353B 0%, #1A1A1F 100%);
+   display: inline-block;
+   width: 40px;
+   height: 40px;
+   text-align: center;
+   margin-right: 20px;
+   color: #fff;
+   border-radius: 50%;
+   font-size: 40px;
+}
+
+.check__number{
+   font-weight: 700;
+}
+.check__copy{
+   font-weight: 300;
+}
+.newsletter{
+   width: 60%;
+   margin: 0 auto;
+   margin-top: 40px;
+   height: auto;
+   font-family: inherit;
+   position: relative;
+   border-radius: 6px;
+}
+
+.newsletter--modifier{
+   margin: 0;
+   width: 80%;
+}
+
+.newsletter__input{
+   width: 100%;
+   height: 100%;
+   padding: 22px 10px;
+   outline: none;
+   font-family: inherit;
+   border-radius: 6px;
+   border: solid 1px var(--black1);
+}
+.newsletter__submit{
+   position: absolute;
+   right: 8px;
+   top: 10%;
+   height: 80%;
+   background: linear-gradient(180deg, #30353B 0%, #1A1A1F 100%);
+   color: #fff;
+   padding: 0 15px;
+   border: none;
+   border-radius: 6px;
+   font-family: inherit;
+   font-weight: 700;
+   cursor: pointer;
 }
