--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,11 @@ font-family: 'Roboto', sans-serif;
 .nav__hero{
    color: #fff;
    height: 70px;
-   border-bottom: 1px solid rgba(255, 255, 255, 0.1)
+   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+   position: fixed;
+   width: 100%;
+   background: #30353B;
+   z-index: 1000;
 }
 
 .nav__container{
@@ -49,7 +53,8 @@ font-family: 'Roboto', sans-serif;
    align-items: center;
    justify-content: space-between;
    height: inherit;
-   padding: 0
+   padding: 0;
+  
 }
 
 .logo__name{
@@ -84,6 +89,7 @@ font-family: 'Roboto', sans-serif;
    object-fit: cover;
    width: 48%;
    min-height: 90%;
+   margin-top: 70PX;
 }
 
 .hero__textos{
